feat(graph): added custom tooltip and filtered out data with no breakdown

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,15 @@
 {
   "sleep": {
+    "graph2d": {
+      "tooltip": {
+        "date": "Date",
+        "quality": "Sleep Quality (%)",
+        "deep": "Deep Sleep (%)",
+        "light": "Light Sleep (%)",
+        "rem": "REM Sleep (%)",
+        "awake": "Awake Time (%)"
+      }
+    },
     "metric-config": {
       "checkbox": {
         "quality": "Sleep Quality",
