feat(graph): added language toggle button

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,7 +7,11 @@
         "duration": "Duration"
       },
       "typical-sleep-session": "Healthy Range",
-      "sessions": "{{ active }} / {{ total }} sessions"
+      "sessions": "{{ active }} / {{ total }} sessions",
+      "language": {
+        "checked": "Japanese",
+        "unchecked": "English"
+      }
     },
     "metric-config": {
       "checkbox": {
