--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -7,7 +7,11 @@
         "duration": "期間"
       },
       "typical-sleep-session": "健康的な範囲",
-      "sessions": "{{ active }} / {{ total }} セッション"
+      "sessions": "{{ active }} / {{ total }} セッション",
+      "language": {
+        "checked": "日本語",
+        "unchecked": "英語"
+      }
     },
     "metric-config": {
       "checkbox": {
