test(data): added linear regression hook unit tests and shortened english translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,11 +15,11 @@
     },
     "metric-config": {
       "checkbox": {
-        "quality": "Sleep Quality",
-        "deep": "Deep Sleep",
-        "light": "Light Sleep",
-        "rem": "REM Sleep",
-        "awake": "Awake Time"
+        "quality": "Quality",
+        "deep": "Deep",
+        "light": "Light",
+        "rem": "REM",
+        "awake": "Awake"
       }
     }
   },
