feat(graph): added duration as a percentage of 8 hours as a new metric

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,7 +19,8 @@
         "deep": "Deep",
         "light": "Light",
         "rem": "REM",
-        "awake": "Awake"
+        "awake": "Awake",
+        "duration": "Duration"
       }
     }
   },
