--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -19,7 +19,8 @@
         "deep": "深睡眠",
         "light": "浅い眠",
         "rem": "レム眠",
-        "awake": "目覚め"
+        "awake": "目覚め",
+        "duration": "期間"
       }
     }
   },
