feat(graph): added nap indicator to session tooltip

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,7 +4,8 @@
       "tooltip": {
         "date": "Date",
         "quality": "Sleep Quality (%)",
-        "duration": "Duration"
+        "duration": "Duration",
+        "nap": "Nap"
       },
       "typical-sleep-session": "Healthy Range",
       "sessions": "{{ active }} / {{ total }} sessions",
