--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -4,7 +4,8 @@
       "tooltip": {
         "date": "日付",
         "quality": "睡眠の質 (%)",
-        "duration": "期間"
+        "duration": "期間",
+        "nap": "昼寝"
       },
       "typical-sleep-session": "健康的な範囲",
       "sessions": "{{ active }} / {{ total }} セッション",
