--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,6 +7,7 @@
         "duration": "Duration",
         "nap": "Nap"
       },
+      "improvement-label": "Improvements Made",
       "typical-sleep-session": "Healthy Range",
       "sessions": "{{ active }} / {{ total }} sessions",
       "language": {
