feat(graph): show all button now changes to "recent" if all sessions are showing

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -16,7 +16,10 @@
       }
     },
     "graph-controls" : {
-      "show-all": "All",
+      "show-all": {
+        "all": "All",
+        "default": "Recent"
+      },
       "metric-config": {
         "checkbox": {
           "quality": "Quality",
