feat(graph): added data source version to active session info

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,6 +10,7 @@
       "improvement-label": "Improvements Made",
       "typical-sleep-session": "Healthy Range",
       "sessions": "{{ active }} / {{ total }} sessions (0 / {{ naps }} naps)",
+      "data-source": "PillowData-08-10-2024.csv",
       "language": {
         "checked": "Japanese",
         "unchecked": "English"
