--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -10,6 +10,7 @@
       "improvement-label": "改善期間",
       "typical-sleep-session": "健康的な範囲",
       "sessions": "{{ active }} / {{ total }} セッション (0 / {{ naps }} 昼寝)",
+      "data-source": "PillowData-08-10-2024.csv",
       "language": {
         "checked": "日本語",
         "unchecked": "英語"
