--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -10,7 +10,10 @@
       "improvement-label": "改善期間",
       "typical-sleep-session": "健康的な範囲",
       "sessions": "{{ active }} / {{ total }} セッション (0 / {{ naps }} 昼寝)",
-      "data-source": "PillowData-08-10-2024.csv",
+      "data-source": {
+        "name": "PillowData-08-10-2024.csv",
+        "title": "データダウンロード"
+      },
       "language": {
         "checked": "日本語",
         "unchecked": "英語"
