feat(graph): added text to stacked view toggle button

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -28,6 +28,10 @@
         "all": "All",
         "default": "Recent"
       },
+      "stacked": {
+        "active": "Single",
+        "inactive": "Stacked"
+      },
       "metric-config": {
         "checkbox": {
           "quality": "Quality",
