--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -28,6 +28,10 @@
         "all": "すべて",
         "default": "最近"
       },
+      "stacked": {
+        "active": "ひとつ",
+        "inactive": "複数"
+      },
       "metric-config": {
         "checkbox": {
           "quality": "睡眠の質",
