feat(graph): added selection placeholder when a second metric is not selected in stacked view

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -21,7 +21,8 @@
       "language": {
         "checked": "Japanese",
         "unchecked": "English"
-      }
+      },
+      "select-second-metric": "Select a second sleep metric to compare"
     },
     "graph-controls" : {
       "show-all": {
