--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -22,7 +22,12 @@
         "checked": "日本語",
         "unchecked": "英語"
       },
-      "select-second-metric": "比較する2つ目の睡眠タイプを選択する"
+      "placeholder": {
+        "message": {
+          "first": "睡眠タイプを選択する",
+          "second": "比較する2つ目の睡眠タイプを選択する"
+        }
+      }
     },
     "graph-controls": {
       "show-all": {
