--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,7 +12,8 @@
       "sessions": {
         "delimiter": " / ",
         "sessions": " sessions ",
-        "naps": " (0 / {{ naps }} naps)"
+        "naps": " (0 / {{ naps }} naps)",
+        "please-select": "Awaiting metric selection..."
       },
       "data-source": {
         "name": "PillowData-08-10-2024.csv",
