--- a/src/locales/jp/translation.json
+++ b/src/locales/jp/translation.json
@@ -12,7 +12,8 @@
       "sessions": {
         "delimiter": " / ",
         "sessions": " セッション ",
-        "naps": " (0 / {{ naps }} 昼寝)"
+        "naps": " (0 / {{ naps }} 昼寝)",
+        "please-select": "メトリックの選択待ち..."
       },
       "data-source": {
         "name": "PillowData-08-10-2024.csv",
